OAuth2 identity provider module is OK